--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "Nathan and Adit!",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.0.0-rc.2",
     "brain": "^0.7.0",
     "express": "^4.13.4",
+    "historic": "0.0.3",
+    "intraday": "0.0.5",
     "jade": "^1.11.0",
-    "morgan": "^1.7.0"
+    "mkdirp": "^0.5.1",
+    "morgan": "^1.7.0",
+    "node-sass-middleware": "^0.9.8",
+    "request": "^2.69.0"
   }
 }
