--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "brain": "^0.7.0",
     "express": "^4.13.4",
     "express-flash": "0.0.2",
+    "express-session": "^1.13.0",
     "express-validator": "^2.20.3",
     "historic": "0.0.3",
     "intraday": "0.0.5",
     "jade": "^1.11.0",
+    "json2csv": "^3.2.0",
     "mkdirp": "^0.5.1",
     "morgan": "^1.7.0",
     "node-sass-middleware": "^0.9.8",
+    "python-shell": "^0.4.0",
     "request": "^2.69.0"
   }
 }
