--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "machine-learning",
+  "name": "doges-of-wallst",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "author": "Nathan and Adit!",
   "license": "ISC",
